# ChangeLog for app-admin/wol-init
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Recreate full Manifest

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Thin manifest, dropped no-herd from metatadata.xml

*wol-init-0.4 (14 Feb 2011)

  14 Feb 2011; Justin Lecher <jlec@gentoo.org> -wol-init-0.1.ebuild,
  -wol-init-0.2.ebuild, +wol-init-0.4.ebuild, files/metadata.xml, metadata.xml:
  Version Bump, cleaned old