@@ -1,2 +1,1 @@
-DIST wol-init-0.3.tar.bz2 495 SHA256 e3ba4dc477026ec8b7a60b8535d75fe9f1e9697472680584542f13364aae77c8 SHA512 aa3c2fa02343f1051e18a7cd7d97d8cab4eba1e6fcdbcf4d18bb19b472b2e767c5cd7e5b9c547850bf711800428327954e8d558d5958ab6c3168b24db4bb41b9 WHIRLPOOL 1a2dca2c8d2f4595cc7327ccefeca219d2373a1a3e832913c91cce3c0b7e0ab1b7470636d777d9e516b4b858fdde9e347f85a45d2902e95ac96b818c724ff8d1
 DIST wol-init-0.4.tar.bz2 512 SHA256 0bd606ea48bf3177e8cd5c80aaddaaf085d610423c275be1fcd56f925b95b359 SHA512 edbe3dde867ee6db9ef9e45bf713ffb76783108e70afada92b287b6730a1b29d6e6f236ad901ae2acc9332905abdce4bac2b5a2fbf55df80069b9a64cf3f7a95 WHIRLPOOL a5f4237839f9942d0096697f8cfbc8f078596f820559cfd29773c889a5cc69ac3e0023ffd1959a1553be841dc5c57f6ef7e90f9df99bbc51efd5b5bb59093632
