@@ -1,22 +1,22 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=5
+
 DESCRIPTION="Init script which sets up the ethernet devices for wakeonlan"
-SRC_URI="http://gentoo.j-schmitz.net/portage-overlay/app-admin/wol-init/${P}.tar.bz2"
 HOMEPAGE="http://www.j-schmitz.net"
+SRC_URI="http://gentoo.j-schmitz.net/portage-overlay/app-admin/wol-init/${P}.tar.bz2"
 
 SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="~x86 ~amd64"
 IUSE=""
 
-RESTRICT="mirror"
-
 RDEPEND="sys-apps/ethtool"
 DEPEND=""
 
 src_install(){
-	newinitd wakeonlan.init wakeonlan || die
-	newconfd wakeonlan.conf wakeonlan || die
+	newinitd wakeonlan.init wakeonlan
+	newconfd wakeonlan.conf wakeonlan
 }
