@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/wol-init
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2013; Justin Lecher <jlec@gentoo.org> -wol-init-0.3.ebuild,
+  -wol-init-0.4.ebuild, +wol-init-0.4-r1.ebuild, metadata.xml:
+  Bump to latest EPAI and drop old
 
   02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
   Recreate full Manifest
